<resources>
    <string name="app_name">PR008- CardView Propina</string>
    <string name="cuenta">Cuenta</string>
    <string name="tippercent">Tip%</string>
    <string name="porcentajeProp">%Prop.</string>
    <string name="propina">Propina</string>
    <string name="total">Total</string>
    <string name="redondear">Redondear</string>
    <string name="por_comensal">Por comensal</string>
    <string name="comensales">Comensales</string>
    <string name="calcular">Calcular</string>
</resources>
