<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <ScrollView
        android:id="@+id/scvTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilCuenta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true">

                            <EditText
                                android:id="@+id/txtCuenta"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/cuenta"
                                android:inputType="numberDecimal"
                                />

                         </android.support.design.widget.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/tilTipPercent"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_weight="1">

                                <EditText
                                    android:id="@+id/txtPorcentajeProp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/porcentajeProp"
                                    android:inputType="number"
                                    />

                            </android.support.design.widget.TextInputLayout>
                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/tilPropina"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_weight="1">

                                <EditText
                                    android:id="@+id/txtPropina"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/propina"
                                    android:focusable="false"
                                    />

                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilTotal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            >

                            <EditText
                                android:id="@+id/txtTotal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/total"
                                android:focusable="false"
                                />

                        </android.support.design.widget.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/calcular"
                                android:id="@+id/btnCalcular"
                                android:layout_gravity="end"
                                android:layout_weight="1"
                                />
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Limpiar"
                                android:id="@+id/btnLimpiar1"
                                android:layout_weight="1"/>
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/redondear"
                                android:id="@+id/btnRedondear1"
                                android:layout_gravity="end"
                                android:layout_weight="1"/>
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/tilComensales"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_weight="1">

                                <EditText
                                    android:id="@+id/txtComensales"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/comensales"
                                    android:inputType="number"
                                    />

                            </android.support.design.widget.TextInputLayout>
                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/tilPorComensal"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_weight="1">

                                <EditText
                                    android:id="@+id/txtPorComensal"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/por_comensal"
                                    android:focusable="false"
                                    />

                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>




                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/calcular"
                                android:id="@+id/btnCalcular2"
                                android:layout_gravity="end"
                                android:layout_weight="1"
                                />
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Limpiar"
                                android:id="@+id/btnLimpiar2"
                                android:layout_weight="1"/>
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/redondear"
                                android:id="@+id/btnRedondear2"
                                android:layout_gravity="end"
                                android:layout_weight="1"/>
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
    </ScrollView>


</RelativeLayout>
